--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -154,6 +154,7 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -236,6 +237,7 @@ allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.235.198.191;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -285,7 +287,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -694,6 +695,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -822,103 +824,7 @@ allow 204.8.156.142;
 allow 204.85.191.7;
 allow 204.85.191.8;
 allow 204.85.191.9;
-allow 204.8.96.100;
-allow 204.8.96.101;
-allow 204.8.96.102;
-allow 204.8.96.103;
-allow 204.8.96.104;
-allow 204.8.96.105;
-allow 204.8.96.106;
-allow 204.8.96.107;
-allow 204.8.96.108;
-allow 204.8.96.109;
-allow 204.8.96.110;
-allow 204.8.96.111;
-allow 204.8.96.112;
-allow 204.8.96.113;
-allow 204.8.96.114;
-allow 204.8.96.115;
-allow 204.8.96.116;
-allow 204.8.96.117;
-allow 204.8.96.118;
-allow 204.8.96.119;
 allow 204.8.96.120;
-allow 204.8.96.121;
-allow 204.8.96.122;
-allow 204.8.96.123;
-allow 204.8.96.140;
-allow 204.8.96.141;
-allow 204.8.96.142;
-allow 204.8.96.143;
-allow 204.8.96.144;
-allow 204.8.96.145;
-allow 204.8.96.146;
-allow 204.8.96.147;
-allow 204.8.96.148;
-allow 204.8.96.149;
-allow 204.8.96.150;
-allow 204.8.96.151;
-allow 204.8.96.152;
-allow 204.8.96.153;
-allow 204.8.96.154;
-allow 204.8.96.155;
-allow 204.8.96.156;
-allow 204.8.96.157;
-allow 204.8.96.158;
-allow 204.8.96.159;
-allow 204.8.96.160;
-allow 204.8.96.161;
-allow 204.8.96.162;
-allow 204.8.96.163;
-allow 204.8.96.164;
-allow 204.8.96.165;
-allow 204.8.96.166;
-allow 204.8.96.167;
-allow 204.8.96.168;
-allow 204.8.96.169;
-allow 204.8.96.170;
-allow 204.8.96.171;
-allow 204.8.96.172;
-allow 204.8.96.173;
-allow 204.8.96.174;
-allow 204.8.96.175;
-allow 204.8.96.176;
-allow 204.8.96.177;
-allow 204.8.96.178;
-allow 204.8.96.179;
-allow 204.8.96.180;
-allow 204.8.96.181;
-allow 204.8.96.182;
-allow 204.8.96.183;
-allow 204.8.96.184;
-allow 204.8.96.185;
-allow 204.8.96.186;
-allow 204.8.96.187;
-allow 204.8.96.188;
-allow 204.8.96.189;
-allow 204.8.96.64;
-allow 204.8.96.65;
-allow 204.8.96.66;
-allow 204.8.96.67;
-allow 204.8.96.69;
-allow 204.8.96.71;
-allow 204.8.96.72;
-allow 204.8.96.73;
-allow 204.8.96.74;
-allow 204.8.96.75;
-allow 204.8.96.76;
-allow 204.8.96.77;
-allow 204.8.96.78;
-allow 204.8.96.79;
-allow 204.8.96.80;
-allow 204.8.96.81;
-allow 204.8.96.82;
-allow 204.8.96.83;
-allow 204.8.96.85;
-allow 204.8.96.86;
-allow 204.8.96.87;
-allow 204.8.96.88;
-allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.116.34;
 allow 205.185.117.149;
@@ -1146,103 +1052,7 @@ allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f530:8002::19;
-allow 2620:7:6001::101;
-allow 2620:7:6001::102;
-allow 2620:7:6001::103;
-allow 2620:7:6001::104;
-allow 2620:7:6001::105;
-allow 2620:7:6001::106;
-allow 2620:7:6001::107;
-allow 2620:7:6001::108;
-allow 2620:7:6001::109;
-allow 2620:7:6001::110;
-allow 2620:7:6001::111;
-allow 2620:7:6001::112;
-allow 2620:7:6001::113;
-allow 2620:7:6001::114;
-allow 2620:7:6001::115;
-allow 2620:7:6001::116;
-allow 2620:7:6001::117;
-allow 2620:7:6001::118;
-allow 2620:7:6001::119;
 allow 2620:7:6001::120;
-allow 2620:7:6001::121;
-allow 2620:7:6001::122;
-allow 2620:7:6001::123;
-allow 2620:7:6001::140;
-allow 2620:7:6001::141;
-allow 2620:7:6001::142;
-allow 2620:7:6001::143;
-allow 2620:7:6001::144;
-allow 2620:7:6001::145;
-allow 2620:7:6001::146;
-allow 2620:7:6001::147;
-allow 2620:7:6001::148;
-allow 2620:7:6001::149;
-allow 2620:7:6001::150;
-allow 2620:7:6001::151;
-allow 2620:7:6001::152;
-allow 2620:7:6001::153;
-allow 2620:7:6001::154;
-allow 2620:7:6001::155;
-allow 2620:7:6001::156;
-allow 2620:7:6001::157;
-allow 2620:7:6001::158;
-allow 2620:7:6001::159;
-allow 2620:7:6001::160;
-allow 2620:7:6001::161;
-allow 2620:7:6001::162;
-allow 2620:7:6001::163;
-allow 2620:7:6001::164;
-allow 2620:7:6001::165;
-allow 2620:7:6001::166;
-allow 2620:7:6001::167;
-allow 2620:7:6001::168;
-allow 2620:7:6001::169;
-allow 2620:7:6001::170;
-allow 2620:7:6001::171;
-allow 2620:7:6001::172;
-allow 2620:7:6001::173;
-allow 2620:7:6001::174;
-allow 2620:7:6001::175;
-allow 2620:7:6001::176;
-allow 2620:7:6001::177;
-allow 2620:7:6001::178;
-allow 2620:7:6001::179;
-allow 2620:7:6001::180;
-allow 2620:7:6001::181;
-allow 2620:7:6001::182;
-allow 2620:7:6001::183;
-allow 2620:7:6001::184;
-allow 2620:7:6001::185;
-allow 2620:7:6001::186;
-allow 2620:7:6001::187;
-allow 2620:7:6001::188;
-allow 2620:7:6001::189;
-allow 2620:7:6001::e664;
-allow 2620:7:6001::ffff:c759:e640;
-allow 2620:7:6001::ffff:c759:e641;
-allow 2620:7:6001::ffff:c759:e642;
-allow 2620:7:6001::ffff:c759:e643;
-allow 2620:7:6001::ffff:c759:e645;
-allow 2620:7:6001::ffff:c759:e647;
-allow 2620:7:6001::ffff:c759:e648;
-allow 2620:7:6001::ffff:c759:e649;
-allow 2620:7:6001::ffff:c759:e64a;
-allow 2620:7:6001::ffff:c759:e64b;
-allow 2620:7:6001::ffff:c759:e64c;
-allow 2620:7:6001::ffff:c759:e64d;
-allow 2620:7:6001::ffff:c759:e64e;
-allow 2620:7:6001::ffff:c759:e64f;
-allow 2620:7:6001::ffff:c759:e650;
-allow 2620:7:6001::ffff:c759:e651;
-allow 2620:7:6001::ffff:c759:e652;
-allow 2620:7:6001::ffff:c759:e653;
-allow 2620:7:6001::ffff:c759:e655;
-allow 2620:7:6001::ffff:c759:e656;
-allow 2620:7:6001::ffff:c759:e657;
-allow 2620:7:6001::ffff:c759:e658;
-allow 2620:7:6001::ffff:c759:e659;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
@@ -1767,7 +1577,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.225.165.104;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1840,6 +1649,7 @@ allow 83.97.20.251;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
+allow 84.211.225.54;
 allow 84.239.46.144;
 allow 85.17.9.83;
 allow 85.215.76.62;
