--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -146,6 +146,7 @@ allow 146.59.35.38;
 allow 146.70.146.26;
 allow 146.70.164.210;
 allow 147.45.116.145;
+allow 147.45.49.17;
 allow 147.45.78.34;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -191,7 +192,6 @@ allow 172.105.161.162;
 allow 172.232.164.52;
 allow 172.234.33.174;
 allow 172.235.29.198;
-allow 172.81.131.110;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
@@ -217,7 +217,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.30.152.227;
+allow 178.31.51.33;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -859,7 +859,6 @@ allow 217.12.221.131;
 allow 217.146.2.41;
 allow 23.137.248.100;
 allow 23.137.248.139;
-allow 23.137.248.69;
 allow 23.137.250.34;
 allow 23.137.250.83;
 allow 23.137.253.108;
@@ -898,7 +897,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.26.133.152;
@@ -922,14 +920,12 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
 allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
-allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1171,6 +1167,7 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
+allow 2a05:541:150:6::1;
 allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:6841::1;
@@ -1453,7 +1450,6 @@ allow 38.152.53.244;
 allow 38.152.53.245;
 allow 38.97.116.244;
 allow 41.216.183.87;
-allow 44.217.244.92;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1546,6 +1542,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1572,6 +1569,7 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 52.7.177.25;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
@@ -1641,6 +1639,7 @@ allow 82.153.138.208;
 allow 82.153.138.24;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
