--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -123,14 +123,12 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
 allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
-allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -371,6 +369,7 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
+allow 2a05:541:150:6::1;
 allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:6841::1;
