--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -146,6 +146,7 @@ deny 146.59.35.38;
 deny 146.70.146.26;
 deny 146.70.164.210;
 deny 147.45.116.145;
+deny 147.45.49.17;
 deny 147.45.78.34;
 deny 149.202.79.101;
 deny 149.202.79.129;
@@ -191,7 +192,6 @@ deny 172.105.161.162;
 deny 172.232.164.52;
 deny 172.234.33.174;
 deny 172.235.29.198;
-deny 172.81.131.110;
 deny 172.81.131.139;
 deny 172.81.131.156;
 deny 172.81.132.94;
@@ -217,7 +217,7 @@ deny 178.218.144.51;
 deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.218.144.99;
-deny 178.30.152.227;
+deny 178.31.51.33;
 deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
@@ -859,7 +859,6 @@ deny 217.12.221.131;
 deny 217.146.2.41;
 deny 23.137.248.100;
 deny 23.137.248.139;
-deny 23.137.248.69;
 deny 23.137.250.34;
 deny 23.137.250.83;
 deny 23.137.253.108;
@@ -898,7 +897,6 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.165.104.119;
 deny 23.236.122.62;
 deny 23.26.133.152;
@@ -922,14 +920,12 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::3d;
 deny 2602:f9f3:0:2::5;
 deny 2602:f9f3:0:2::8d;
 deny 2602:f9f3:0:2::91;
-deny 2602:fc24:12:759::1;
 deny 2602:fc24:12:77c0::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
@@ -1171,6 +1167,7 @@ deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
+deny 2a05:541:150:6::1;
 deny 2a05:b0c7:67b0::1;
 deny 2a05:b0c7:67bb::1;
 deny 2a05:b0c7:6841::1;
@@ -1453,7 +1450,6 @@ deny 38.152.53.244;
 deny 38.152.53.245;
 deny 38.97.116.244;
 deny 41.216.183.87;
-deny 44.217.244.92;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1546,6 +1542,7 @@ deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.224;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.190;
 deny 5.255.103.235;
@@ -1572,6 +1569,7 @@ deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
+deny 52.7.177.25;
 deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
@@ -1641,6 +1639,7 @@ deny 82.153.138.208;
 deny 82.153.138.24;
 deny 82.221.128.191;
 deny 82.221.131.5;
+deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.115;
