--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -155,6 +155,8 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
+allow 154.26.159.157;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -503,9 +505,7 @@ allow 185.227.68.78;
 allow 185.233.100.23;
 allow 185.241.208.115;
 allow 185.241.208.196;
-allow 185.241.208.202;
 allow 185.241.208.204;
-allow 185.241.208.206;
 allow 185.241.208.232;
 allow 185.241.208.236;
 allow 185.241.208.243;
@@ -695,6 +695,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -898,7 +899,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.26.133.152;
@@ -923,7 +923,6 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -1068,6 +1067,7 @@ allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
+allow 2a01:4f8:c0c:317d::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
@@ -1435,7 +1435,6 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.205.94.252;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.114.41.119;
@@ -1459,6 +1458,7 @@ allow 38.152.53.246;
 allow 38.152.53.250;
 allow 38.152.53.251;
 allow 38.97.116.244;
+allow 3.95.90.155;
 allow 41.216.183.87;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1515,7 +1515,6 @@ allow 45.80.208.127;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.94.31.180;
-allow 45.94.31.68;
 allow 45.95.169.223;
 allow 45.95.169.224;
 allow 45.95.169.225;
@@ -1552,7 +1551,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1630,6 +1628,7 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
+allow 78.47.62.116;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
