--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -155,6 +155,8 @@ set_real_ip_from 149.56.44.47;
 set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
+set_real_ip_from 154.26.159.157;
+set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
@@ -503,9 +505,7 @@ set_real_ip_from 185.227.68.78;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.196;
-set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
-set_real_ip_from 185.241.208.206;
 set_real_ip_from 185.241.208.232;
 set_real_ip_from 185.241.208.236;
 set_real_ip_from 185.241.208.243;
@@ -695,6 +695,7 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
+set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
@@ -898,7 +899,6 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.165.104.119;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.152;
@@ -923,7 +923,6 @@ set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::3d;
@@ -1068,6 +1067,7 @@ set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
+set_real_ip_from 2a01:4f8:c0c:317d::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
@@ -1435,7 +1435,6 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.205.94.252;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.37.81;
 set_real_ip_from 37.114.41.119;
@@ -1459,6 +1458,7 @@ set_real_ip_from 38.152.53.246;
 set_real_ip_from 38.152.53.250;
 set_real_ip_from 38.152.53.251;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 3.95.90.155;
 set_real_ip_from 41.216.183.87;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
@@ -1515,7 +1515,6 @@ set_real_ip_from 45.80.208.127;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.94.31.180;
-set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.223;
 set_real_ip_from 45.95.169.224;
 set_real_ip_from 45.95.169.225;
@@ -1552,7 +1551,6 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
@@ -1630,6 +1628,7 @@ set_real_ip_from 77.91.85.147;
 set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
+set_real_ip_from 78.47.62.116;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
 set_real_ip_from 80.210.78.252;
