--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.28.181.207;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -219,7 +220,6 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.31.51.33;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -560,6 +560,7 @@ allow 188.68.52.231;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
+allow 191.96.165.34;
 allow 192.108.48.150;
 allow 192.42.116.14;
 allow 192.42.116.15;
@@ -859,8 +860,10 @@ allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.146.2.41;
+allow 23.137.248.100;
 allow 23.137.248.139;
 allow 23.137.250.34;
+allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
 allow 23.137.253.110;
@@ -928,6 +931,8 @@ allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:77c0::1;
+allow 2602:fc24:12:81a6::1;
+allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
@@ -1381,7 +1386,6 @@ allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:3e3:519::1;
 allow 2a0e:97c0:3ea:372::1;
-allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:12d:abcd:f8fe:d2ff:feb0:6d14;
 allow 2a0e:b107:dd0::3:ed78:7632;
@@ -1431,7 +1435,6 @@ allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
 allow 37.114.37.81;
-allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
 allow 37.120.239.59;
@@ -1542,7 +1545,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.23.112.133;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.26;
@@ -1623,6 +1625,7 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
+allow 79.102.34.63;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
@@ -1634,6 +1637,10 @@ allow 80.94.92.106;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.36;
+allow 82.153.138.119;
+allow 82.153.138.182;
+allow 82.153.138.208;
+allow 82.153.138.24;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
@@ -1733,6 +1740,12 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
+allow 94.177.106.247;
+allow 94.177.106.37;
+allow 94.177.106.46;
+allow 94.177.106.54;
+allow 94.177.106.55;
+allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
